--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,25 @@
-src/
-example/
-website/
+node_modules
+.cache
+.github
 
-node_modules/
+.DS_Store
 
-.rts2_cache_*
-.cache/
+/dist
+/src
+/example
+/tests
 
-.eslintrc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+tsconfig.json
+tsconfig.*.json
+jest.json
+
+.babelrc
+.travis.yml
+.prettierrc
+.eslintrc.json
+.eslintignore
 .editorconfig
-.github/
-
-dist/*.map
-
-logo.png
