--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "@koale/useworker",
+  "name": "@jimengio/use-worker",
   "version": "3.2.1",
-  "types": "dist/index.d.ts",
-  "source": "src/index.ts",
-  "main": "dist/index.js",
-  "umd:main": "dist/index.umd.js",
-  "module": "dist/index.mjs",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "module": "esm/index.js",
+  "sideEffects": false,
   "scripts": {
-    "build": "microbundle src/index.ts",
-    "dev": "microbundle watch",
-    "eslint": "eslint src/ --ext .ts"
+    "build": "rm -rf ./lib/* ./esm/* && yarn build:cjs && yarn build:es",
+    "build:cjs": "tsc",
+    "build:es": "tsc -m ESNext --outDir ./esm"
   },
   "peerDependencies": {
     "react": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@types/react": "^16.9.34",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "microbundle": "^0.12.0-next.8"
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "prettier": "^2.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typescript": "^3.9.7"
   },
   "description": "useWorker() - Web worker using React hook",
   "author": "alewin",
   "license": "MIT",
-  "repository": "alewin/useworker",
+  "files": [
+    "esm",
+    "lib"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jimengio/useWorker.git"
+  },
   "keywords": [
     "react",
     "hooks",
