--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,36 @@
 {
-  "extends": [
-    "airbnb-typescript"
-  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:react/recommended",
+    "prettier",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "env": {
     "browser": true,
-    "es6": true
+    "jest": true
   },
   "rules": {
-    "@typescript-eslint/semi": [
-      "error",
-      "never"
-    ],
-    "arrow-parens": 0,
-    "no-underscore-dangle": 0,
-    "import/prefer-default-export": 0,
-    "import/no-named-as-default": 0,
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/unbound-method": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-global-assign": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   },
-  "plugins": [
-    "react-hooks"
-  ]
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  }
 }
