--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rm -rf ./lib/* ./esm/* && yarn build:cjs && yarn build:es",
     "build:cjs": "tsc",
-    "build:es": "tsc -m ESNext --outDir ./esm"
+    "build:es": "tsc -m ESNext --outDir ./esm",
+    "eslint": "eslint src/**/*"
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -16,6 +17,13 @@
   "devDependencies": {
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
