--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "rm -rf ./lib/* ./esm/* && yarn build:cjs && yarn build:es",
     "build:cjs": "tsc",
     "build:es": "tsc -m ESNext --outDir ./esm",
-    "eslint": "eslint src/**/*"
+    "eslint": "eslint src/**/*",
+    "prettier": "prettier --write './src/**/*.{ts,tsx}' --config ./.prettierrc",
+    "prepare": "yarn build"
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -24,7 +26,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "prettier": "^2.1.0",
+    "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^3.9.7"
